the-project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list
  template:
    metadata:
      labels:
        app: todo-list
    spec:
      volumes:
        - name: image-elapsed
          persistentVolumeClaim:
            claimName: todo-list-claim
      containers:
        - name: todo-list-app
          image: aritrabb/todo-list
          volumeMounts:
            - name: image-elapsed
              mountPath: /app/static
        - name: todo-backend
          image: aritrabb/todo-backend
